--- a/homework.tex
+++ b/homework.tex
@@ -86,12 +86,12 @@
 %   - Author
 %
 
-\newcommand{\hmwkTitle}{Homework\ \#2}
-\newcommand{\hmwkDueDate}{February 12, 2014}
-\newcommand{\hmwkClass}{Calculus}
-\newcommand{\hmwkClassTime}{Section A}
-\newcommand{\hmwkClassInstructor}{Professor Isaac Newton}
-\newcommand{\hmwkAuthorName}{\textbf{Josh Davis} \and \textbf{Davis Josh}}
+\newcommand{\hmwkTitle}{Assignment\ \#3}
+\newcommand{\hmwkDueDate}{September 22, 2022}
+\newcommand{\hmwkClass}{Formal}
+\newcommand{\hmwkClassTime}{4:10 PM}
+\newcommand{\hmwkClassInstructor}{Professor Matthew Patitz}
+\newcommand{\hmwkAuthorName}{\textbf{Piam Chittisane}}
 
 %
 % Title Page
@@ -100,7 +100,7 @@
 \title{
     \vspace{2in}
     \textmd{\textbf{\hmwkClass:\ \hmwkTitle}}\\
-    \normalsize\vspace{0.1in}\small{Due\ on\ \hmwkDueDate\ at 3:10pm}\\
+    \normalsize\vspace{0.1in}\small{Due\ on\ \hmwkDueDate\ at 11:59pm}\\
     \vspace{0.1in}\large{\textit{\hmwkClassInstructor\ \hmwkClassTime}}
     \vspace{3in}
 }
@@ -142,76 +142,14 @@
 \pagebreak
 
 \begin{homeworkProblem}
-    Give an appropriate positive constant \(c\) such that \(f(n) \leq c \cdot
-    g(n)\) for all \(n > 1\).
-
-    \begin{enumerate}
-        \item \(f(n) = n^2 + n + 1\), \(g(n) = 2n^3\)
-        \item \(f(n) = n\sqrt{n} + n^2\), \(g(n) = n^2\)
-        \item \(f(n) = n^2 - n + 1\), \(g(n) = n^2 / 2\)
-    \end{enumerate}
-
-    \textbf{Solution}
-
-    We solve each solution algebraically to determine a possible constant
-    \(c\).
+    Prove Theorem 1 (i.e. if L is a regular language, then $\overline{L}=\Sigma^*/L$ is also regular).
     \\
-
-    \textbf{Part One}
-
-    \[
-        \begin{split}
-            n^2 + n + 1 &=
-            \\
-            &\leq n^2 + n^2 + n^2
-            \\
-            &= 3n^2
-            \\
-            &\leq c \cdot 2n^3
-        \end{split}
-    \]
-
-    Thus a valid \(c\) could be when \(c = 2\).
+    \solution
     \\
-
-    \textbf{Part Two}
-
-    \[
-        \begin{split}
-            n^2 + n\sqrt{n} &=
-            \\
-            &= n^2 + n^{3/2}
-            \\
-            &\leq n^2 + n^{4/2}
-            \\
-            &= n^2 + n^2
-            \\
-            &= 2n^2
-            \\
-            &\leq c \cdot n^2
-        \end{split}
-    \]
-
-    Thus a valid \(c\) is \(c = 2\).
-    \\
-
-    \textbf{Part Three}
-
-    \[
-        \begin{split}
-            n^2 - n + 1 &=
-            \\
-            &\leq n^2
-            \\
-            &\leq c \cdot n^2/2
-        \end{split}
-    \]
-
-    Thus a valid \(c\) is \(c = 2\).
-
+    If L is a regular language, that must mean there is a DFA $M=(Q,\Sigma,\delta,q_0,F)$ that recognizes the language.
+    Since $\overline{L}$ accepts any expression that isn't accepted by $L$, all that needs to be done is complement the accepting states.
+    DFA $\overline{M}=(Q,\Sigma,\delta,q_0,Q/F)$ should exist such that $L(\overline{M})=\overline{L}$.
 \end{homeworkProblem}
-
-\pagebreak
 
 \begin{homeworkProblem}
     Let \(\Sigma = \{0, 1\}\). Construct a DFA \(A\) that recognizes the
